# codemap

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  agentsmd.template.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
agent_chat/: plan_file-tree_2026-03-17.md
docs/: arch.md  product.md
examples/: debug_tree.rs
memory/procedural/: how_to_codemap_progressive_disclosure.md
scripts/: install.ps1  install.sh
src/: cli.rs  lib.rs  main.rs  onboard.rs  parser.rs  renderer.rs  setup.rs  tree.rs  types.rs  walker.rs
src/languages/: bash.rs  c_lang.rs  cpp.rs  csharp.rs  dart.rs  elixir.rs  go_lang.rs  haskell.rs  java.rs  javascript.rs  julia.rs  kotlin.rs  lua.rs  mod.rs  ocaml.rs  php.rs  python.rs  r_lang.rs  ruby.rs  rust_lang.rs  scala.rs  sql.rs  swift.rs  typescript.rs  zig.rs
tests/: integration.rs
tests/fixtures/: sample.R  sample.c  sample.cpp  sample.cs  sample.dart  sample.ex  sample.go  sample.hs  sample.java  sample.jl  sample.js  sample.kt  sample.lua  sample.ml  sample.php  sample.py  sample.rb  sample.rs  sample.scala  sample.sh  sample.swift  sample.ts  sample.tsx  sample.zig
